--- a/InnovaCase/Screens/Main/View/MainView.storyboard
+++ b/InnovaCase/Screens/Main/View/MainView.storyboard
@@ -17,26 +17,102 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kox-Tg-99p">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="353.33333333333326" width="393" height="464.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zhw-1C-bLu">
+                                <rect key="frame" x="80" y="117" width="223" height="20.333333333333343"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rUC-xv-gwO">
+                                <rect key="frame" x="122" y="145.33333333333334" width="138" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="RIh-ZO-HGp"/>
+                                    <constraint firstAttribute="height" constant="80" id="Ym6-JB-NCM"/>
+                                </constraints>
+                            </imageView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="KVs-3Z-BD9">
+                                <rect key="frame" x="208" y="59" width="169" height="32"/>
+                                <segments>
+                                    <segment title="Celcius"/>
+                                    <segment title="Fahrenheit"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentControlAction:" destination="Y6W-OH-hqX" eventType="valueChanged" id="loR-8e-3V3"/>
+                                </connections>
+                            </segmentedControl>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="mAE-xr-Ut5">
+                                <rect key="frame" x="41" y="246" width="300" height="88"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country: -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfY-Rq-5Y8">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="21.333333333333332"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21.329999999999998" id="eQn-ZJ-kzI"/>
+                                            <constraint firstAttribute="width" constant="300" id="iRI-ib-xwo"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population: -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azr-SE-UcH">
+                                        <rect key="frame" x="0.0" y="34.333333333333314" width="300" height="20.333333333333329"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20.329999999999998" id="VP1-mN-7lL"/>
+                                            <constraint firstAttribute="width" constant="300" id="ocF-lo-yQ1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunrise: - / Sunset: -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4dd-mX-vE1">
+                                        <rect key="frame" x="0.0" y="67.666666666666686" width="300" height="20.333333333333329"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="UVq-yh-caq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="kox-Tg-99p" secondAttribute="bottom" id="BiW-E6-OI3"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="kox-Tg-99p" secondAttribute="trailing" id="ppt-xn-nSa"/>
-                            <constraint firstItem="kox-Tg-99p" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="xIh-df-SNh"/>
-                            <constraint firstItem="kox-Tg-99p" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="y0c-98-6Br"/>
+                            <constraint firstItem="kox-Tg-99p" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="2g8-WX-yiI"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KVs-3Z-BD9" secondAttribute="trailing" constant="16" id="Jku-Lf-96I"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="rUC-xv-gwO" secondAttribute="trailing" constant="133" id="RWK-Fx-KuC"/>
+                            <constraint firstItem="KVs-3Z-BD9" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Tee-zo-8Aj"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="mAE-xr-Ut5" secondAttribute="trailing" constant="52" id="VLg-9x-weW"/>
+                            <constraint firstItem="rUC-xv-gwO" firstAttribute="top" secondItem="Zhw-1C-bLu" secondAttribute="bottom" constant="8" symbolic="YES" id="aYU-Gd-gF1"/>
+                            <constraint firstItem="kox-Tg-99p" firstAttribute="top" secondItem="mAE-xr-Ut5" secondAttribute="bottom" constant="19.329999999999998" id="dV5-WF-miU"/>
+                            <constraint firstItem="kox-Tg-99p" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="dfC-fY-3zB"/>
+                            <constraint firstItem="KVs-3Z-BD9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="208" id="e5y-uU-14M"/>
+                            <constraint firstItem="rUC-xv-gwO" firstAttribute="top" secondItem="Zhw-1C-bLu" secondAttribute="bottom" constant="8" symbolic="YES" id="eNc-mG-oHU"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Zhw-1C-bLu" secondAttribute="trailing" constant="90" id="g5D-IJ-BNi"/>
+                            <constraint firstItem="Zhw-1C-bLu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="80" id="gvI-QL-HuG"/>
+                            <constraint firstItem="Zhw-1C-bLu" firstAttribute="top" secondItem="KVs-3Z-BD9" secondAttribute="bottom" constant="27" id="nFd-dT-rxg"/>
+                            <constraint firstItem="mAE-xr-Ut5" firstAttribute="top" secondItem="rUC-xv-gwO" secondAttribute="bottom" constant="20.670000000000002" id="qpM-jz-cWG"/>
+                            <constraint firstItem="mAE-xr-Ut5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="41" id="rFT-Sr-SEM"/>
+                            <constraint firstItem="kox-Tg-99p" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="rK9-jG-Zwz"/>
+                            <constraint firstItem="rUC-xv-gwO" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="122" id="wGd-TF-XiI"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cityLbl" destination="Zhw-1C-bLu" id="5Xu-JF-Q90"/>
+                        <outlet property="countryLbl" destination="cfY-Rq-5Y8" id="sA7-DC-Mty"/>
+                        <outlet property="imageView" destination="rUC-xv-gwO" id="Ctf-O8-5oe"/>
+                        <outlet property="populationLbl" destination="Azr-SE-UcH" id="dkl-t8-Oa6"/>
+                        <outlet property="segmentControl" destination="KVs-3Z-BD9" id="3dV-46-Ahp"/>
+                        <outlet property="sunLbl" destination="4dd-mX-vE1" id="xtY-Ks-9km"/>
                         <outlet property="tableView" destination="kox-Tg-99p" id="FdE-vA-YcY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="4"/>
+            <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
