--- a/InnovaCase/Screens/Main/WeatherTableViewCell/WeatherTableViewCell.xib
+++ b/InnovaCase/Screens/Main/WeatherTableViewCell/WeatherTableViewCell.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="WeatherTableViewCell" customModule="InnovaCase" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="316" height="92"/>
+            <rect key="frame" x="0.0" y="0.0" width="415" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="316" height="92"/>
+                <rect key="frame" x="0.0" y="0.0" width="415" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kZ3-18-oKl">
@@ -49,15 +49,30 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feel Like: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wa0-Bd-SSb">
+                        <rect key="frame" x="231.33333333333337" y="47" width="81" height="21"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4X9-dZ-H50">
+                        <rect key="frame" x="312.33333333333331" y="47" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="4X9-dZ-H50" firstAttribute="leading" secondItem="Wa0-Bd-SSb" secondAttribute="trailing" id="0dw-Rw-wiO"/>
                     <constraint firstItem="kZ3-18-oKl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="9Va-4a-JQN"/>
                     <constraint firstItem="AfP-iV-ex3" firstAttribute="leading" secondItem="Tef-Ku-YCo" secondAttribute="trailing" constant="8" symbolic="YES" id="Ghd-aV-NzN"/>
                     <constraint firstItem="Tef-Ku-YCo" firstAttribute="leading" secondItem="Wh4-65-XjW" secondAttribute="trailing" constant="8" symbolic="YES" id="Hj0-lc-d3w"/>
                     <constraint firstItem="hnv-yU-HJa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="47" id="Mci-ns-YL5"/>
                     <constraint firstAttribute="bottom" secondItem="Tef-Ku-YCo" secondAttribute="bottom" constant="24.670000000000002" id="Mu5-Y7-JKn"/>
                     <constraint firstItem="Wh4-65-XjW" firstAttribute="top" secondItem="kZ3-18-oKl" secondAttribute="bottom" constant="1.6699999999999999" id="NW5-2A-7xc"/>
+                    <constraint firstAttribute="bottom" secondItem="Wa0-Bd-SSb" secondAttribute="bottom" constant="24" id="Vrd-zB-cxi"/>
                     <constraint firstItem="Tef-Ku-YCo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="47" id="WbJ-GU-OkT"/>
+                    <constraint firstItem="4X9-dZ-H50" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="47" id="Wi0-tV-NMx"/>
                     <constraint firstItem="dm6-2U-ma7" firstAttribute="leading" secondItem="AfP-iV-ex3" secondAttribute="trailing" constant="10" id="Wsx-0l-QG4"/>
                     <constraint firstItem="kZ3-18-oKl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="XZU-QA-puJ"/>
                     <constraint firstItem="Wh4-65-XjW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="dVu-oy-K63"/>
@@ -69,16 +84,20 @@
                     <constraint firstItem="dm6-2U-ma7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="47" id="u5z-1k-z95"/>
                     <constraint firstItem="AfP-iV-ex3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="47" id="vDW-ZN-peh"/>
                     <constraint firstItem="hnv-yU-HJa" firstAttribute="leading" secondItem="dm6-2U-ma7" secondAttribute="trailing" constant="6" id="wuD-cT-iMm"/>
+                    <constraint firstAttribute="bottom" secondItem="4X9-dZ-H50" secondAttribute="bottom" constant="24" id="yG8-hz-QRg"/>
+                    <constraint firstItem="Wa0-Bd-SSb" firstAttribute="leading" secondItem="hnv-yU-HJa" secondAttribute="trailing" constant="15" id="yeP-HO-yPq"/>
+                    <constraint firstItem="Wa0-Bd-SSb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="47" id="zdz-2y-PVt"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="dateLbl" destination="kZ3-18-oKl" id="opd-5s-aGe"/>
+                <outlet property="feelLikeLbl" destination="4X9-dZ-H50" id="IKF-ox-0L6"/>
                 <outlet property="iconImage" destination="Wh4-65-XjW" id="r8A-G7-QLS"/>
                 <outlet property="maxTempLbl" destination="AfP-iV-ex3" id="wzz-tz-owp"/>
                 <outlet property="minTempLbl" destination="hnv-yU-HJa" id="Qy7-5W-Z3Q"/>
             </connections>
-            <point key="canvasLocation" x="59.541984732824424" y="45.774647887323944"/>
+            <point key="canvasLocation" x="135.1145038167939" y="45.774647887323944"/>
         </tableViewCell>
     </objects>
     <resources>
